--- a/css/stylelogin.css
+++ b/css/stylelogin.css
@@ -38,19 +38,8 @@
 .brand-content {
     display: flex;
     align-items: center;
-    gap: 15px; 
-}
-
-.brand-text h1 {
-    margin: 0;
-    font-size: clamp(3rem, 3.5vw, 2.2rem); 
-    line-height: 1;
-    font-weight: 700;
-}
-
-.brand-logo {
-    width: clamp(48px, 6vw, 120px);
-    height: auto;
+    justify-content: center;
+   
 }
 
 /* Lado direito (login)*/
@@ -126,7 +115,7 @@
 
 
 /* Responsividade */
-@media (max-width: 479px) {
+@media (max-width: 1160px) {
     .login-box {
         flex-direction: column;
         height: 100vh;
@@ -134,10 +123,7 @@
         border-radius: 0;
     }
 
-    .login-brand {
-        height: 50vh;
-    }
-
+ 
     .login-form {
         height: 50vh;
         justify-content: center;
@@ -151,10 +137,7 @@
         font-weight: 700;
     }
 
-    .brand-logo {
-        width: clamp(75px, 6vw, 80px);
-        height: auto;
-    }
+
 
     .avatar-container,
     .input-group {
