--- a/css/chat.css
+++ b/css/chat.css
@@ -64,6 +64,25 @@ body
     filter: blur(5px);
 }
 
+h1, h2
+{
+    display: none;
+}
+
+.hidden
+{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+    
+
 /************************* side bar *************************/
 
 
