Tab navigation set-up

--- a/css/chat.css
+++ b/css/chat.css
@@ -81,6 +81,11 @@ h1, h2
     white-space: nowrap;
     border: 0;
 }
+
+*:focus-visible
+{
+    border: 3px solid yellow;
+}
     
 
 /************************* side bar *************************/
@@ -588,13 +593,9 @@ header button:hover
 /****************** pop-ups ****************************/
 
 
-.alertOverlay {
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.5);
-    display: none;
-    justify-content: center;
-    align-items: center;
+#alertBox {
+    border: none;
+    border-radius: 20px;
 }
 
 .exitContent {
