--- a/css/chat.css
+++ b/css/chat.css
@@ -45,13 +45,13 @@
 
 /***********************************************************/
 
-
 body
 {
     display: grid;
     grid-template-columns: 25% 75%;
 
     width: 90vw;
+    height: 80vh;
 
     gap: 20px;
     background-color: var(--bg);
@@ -140,7 +140,6 @@ aside
     height: 50px;
     border-radius: 10px;
     border-bottom: 2px solid var(--c2);
-
     /*
     opacity: 1;
     transform: translateX(0);
@@ -203,6 +202,7 @@ aside
     background-color: #d41111;
 }
 
+
 .deleteUserBtn {
     display: block;
     position: absolute;
@@ -227,7 +227,8 @@ aside
 .userInfo
 {
     display: flex;
-    width: 95%;
+    /*width: 95%;*/
+    width: 20vw;
 
     align-items: center;
     justify-content: space-between;
@@ -245,7 +246,8 @@ aside
     align-items: center;
     background-color: var(--c1);
     flex-shrink: 0;
-    width: 50px;
+    width: 25%;
+    max-width: 50px;
     aspect-ratio: 1/1;
     border-radius: 50%;
     border: 1px solid black;
@@ -271,13 +273,14 @@ aside
     grid-template-rows: auto auto;
     text-align: left;
     align-items: center;
-    flex-grow: 1;
+    flex:1;
+    min-width: 0.5vw;
     background-color: transparent;
     border-radius: 10px;
     border: none;
     color: white;
     gap: 5px;
-    padding: 10px;
+    padding: clamp(4px, 0.7vw, 12px);
 }
 
 #userDetails:hover
@@ -288,13 +291,13 @@ aside
 #userName
 {
     grid-column: 1 / span 12;
-    font-size: 24px;
+    font-size: clamp(14px, 2.5vw, 24px);
 }
 
 #statusDot
 {
     grid-column: 1 / span 1;
-    width: 10px;
+    width: 1vw;
     aspect-ratio: 1/1;
     border-radius: 50%;
 }
@@ -312,7 +315,7 @@ aside
 #statusDesc
 {
     grid-column: 2 / span 11;
-    font-size: 12px;
+    font-size: clamp(8px, 1.5vw, 12px);
 }
 
 
@@ -320,6 +323,7 @@ aside
 {
     display: flex;
     justify-content: center;
+    width: 5vw;
     align-items: center;
     border-radius: 10px;
     aspect-ratio: 1/1;
@@ -336,7 +340,7 @@ aside
 
 #logoutButton img
 {
-    width: 20px;
+    width: clamp(20px, 2vw, 30px);
     aspect-ratio: 1/1;
 }
 
@@ -356,6 +360,12 @@ header
 
     border-bottom: 4px solid var(--c1);
 }
+
+#toggleAside
+{
+    display:none;
+}
+
 
 .logo
 {
@@ -647,3 +657,50 @@ header button:hover
 
 
 
+@media (max-width: 768px) 
+{
+
+body
+{
+    display:grid;
+    grid-template-columns: auto;
+}
+
+aside {
+    position: fixed;
+    top: 98px;
+    left: 0px;
+    width: 150px;
+    height: 60vh;
+    z-index: 1000;
+
+    transform: translateX(-100%);
+    transition: transform 0.2s ease;
+}
+
+
+aside.active {
+    transform: translateX(0);
+}
+
+
+.userInfo
+{
+    width: 95%;
+}
+
+
+.deleteUserBtn {
+    position: absolute;
+    right: -50px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+#toggleAside
+{
+    display: block;
+}
+
+
+}
