--- a/css/chat.css
+++ b/css/chat.css
@@ -635,17 +635,50 @@ header button:hover
 
 /****************** botões/ícones público-privado ****************************/
 
-/* --- Ícones de Canto nas Mensagens --- */
+/* botão direcionar mensagem */
+.btn-privado {
+    background-color: white;
+    color: #184B90;
+    border: none;
+    border-radius: 8px;
+    padding: 6px 10px;
+    margin-top: 8px;
+    font-size: 12px;
+    font-weight: bolder;
+    cursor: pointer;
+    width: 40%;
+    transition: filter 0.2s ease, transform 0.2s ease;
+}
+
+.btn-privado:hover {
+    filter: brightness(1.2);
+    transform: scale(1.02);
+}
+
+/* ícones de canto das mensagens */
 .msg { position: relative; }
-.bubble-corner-icon { position: absolute; width: 18px; height: 18px; top: 8px; z-index: 2; }
+
 .myMsg .bubble-corner-icon { left: 8px; }
 .otherMsg .bubble-corner-icon { right: 8px; }
 .myMsg .msg-content-wrapper { padding-left: 20px; }
 .otherMsg .msg-content-wrapper { padding-right: 20px; }
 
-/* Cor da mensagem PRIVADA */
-.msg.private { background-color: #ffeaa7; border: 1px solid #fdcb6e; color: black; }
-.dark .msg.private { background-color: #534b35; border: 1px solid #756a4b; color: white; }
+/* cor da mensagem privada */
+.msgBox.private .msgBoxMessage { 
+    background-color: #bcd9f3; 
+    border: 1px solid #bcd9f3; 
+    color: black; 
+}
+
+.dark .msgBox.private .msgBoxMessage {
+    background-color: #5158a3; 
+    border: 1px solid #5158a3;
+    color: #f1f1f1; 
+}
+.dark .msgBox.private .msgBoxUser {
+    color: #f1f1f1; 
+}
+
 .msg-directed-info { font-size: 11px; font-style: italic; opacity: 0.8; }
 .hidden { display: none !important; }
 
