--- a/css/chat.css
+++ b/css/chat.css
@@ -798,6 +798,7 @@ input:checked + .slider:before {
   padding: 5px 0;
   display: none; /* Escondido por padrão */
   overflow: hidden;
+  max-width: 90vw;
 }
 
 /* Mostrar lista quando o checkbox estiver marcado */
@@ -855,7 +856,7 @@ body.dark .option:hover {
 }
 #options-view-button:checked ~ .select-button i.bi-chevron-down {
   transform: rotate(180deg);
-
+}
 
   /******************************************************************************************************/
 @media (max-width: 768px) 
@@ -903,8 +904,31 @@ aside.active {
     display: block;
 }
 
+  #selected-value, 
+  .select-button .bi-chevron-down {
+    display: none;
+  }
+
+  
+  .select-button {
+    padding: 10px;        
+    width: 45px;          
+    height: 45px;        
+    justify-content: center; 
+    border-radius: 50%;  
+    gap: 0;              
+  }
+
+  #options {
+    position: absolute;
+    top: 55px;           
+    left: 50%;            
+    transform: translateX(-50%); 
+    width: 220px;         
+    max-width: 80vw;
+  }
+
 
 
 }
 
-}
