--- a/css/chat.css
+++ b/css/chat.css
@@ -128,6 +128,7 @@ aside
 {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 8px;
     width: 100%;
     height: 60vh;
@@ -137,6 +138,7 @@ aside
 
 .userBox
 {   
+    width: 95%;
     padding: 0px 5px;
     display: flex;
     justify-content: space-between;
@@ -147,8 +149,6 @@ aside
     border-bottom: 2px solid var(--c2);
   
 }
-
-
 
 .userBox:hover
 {
@@ -168,6 +168,7 @@ aside
 .userBoxPhoto img {
     width: 30px;
     height: 30px;
+    border-radius: 100%;
 }
 
 .userBoxName
@@ -199,27 +200,6 @@ aside
 }
 
 
-.deleteUserBtn {
-    display: block;
-    position: absolute;
-    padding: 8px 12px;
-    background-color: #961e1e;
-    border: none;
-    color: white;
-    border-radius: 5px;
-    opacity: 0;
-    transition: left 0.1s ease, opacity 0.1s ease;
-}
-
-.deleteUserBtn:hover
-{
-    background-color: #691414;
-}
-
-.deleteUserBtn.selected {
-    opacity: 1;
-}
-
 .userInfo
 {
     display: flex;
@@ -228,9 +208,10 @@ aside
 
     align-items: center;
     justify-content: space-between;
+    border-radius: 5px;
     padding: 5px;
     gap: 5px;
-    border-top: 1px solid #90B2B4;
+    border-top: 2px solid #90B2B4;
 }
 
 #profileBtn
@@ -247,15 +228,16 @@ aside
     padding: 0px;
 }
 
-#profileBtn:hover
-{
-    background-color: white;
-}
-
 #profileBtn img
 {
     width: 100%;
     height: 100%;
+}
+
+
+#profileBtn img:hover
+{
+    border: 2px solid white;
 }
 
 #userDetails
@@ -270,6 +252,7 @@ aside
     background-color: transparent;
     
     border: none;
+    border-radius: 10px;
     color: white;
     gap: 5px;
     padding: clamp(4px, 0.7vw, 12px);
@@ -283,7 +266,7 @@ aside
 #userName
 {
     grid-column: 1 / span 12;
-    font-size: clamp(12px, 2.5vw, 9px);
+    font-size: clamp(16px, 2.5vw, 9px);
     text-transform:capitalize;
 }
 
@@ -310,7 +293,7 @@ aside
 #statusDesc
 {
     grid-column: 2 / span 11;
-    font-size: clamp(8px, 1.5vw, 12px);
+    font-size: clamp(8px, 1.5vw, 14px);
 }
 
 
@@ -318,7 +301,6 @@ aside
 {
     display: flex;
     justify-content: center;
-    width: 5vw;
     align-items: center;
     border-radius: 10px;
     aspect-ratio: 1/1;
@@ -425,11 +407,10 @@ header button:hover
     padding: 8px;
 }
 
-
 .msgBox
 {
     display: grid;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: auto;
     width: fit-content;
     max-width: 60%;
     padding: 10px;
@@ -437,47 +418,13 @@ header button:hover
     border-radius: 20px;
 }
 
-.msgBox.sent
-{
-    align-self: flex-end;
-}
-
-.msgBox.received
-{
-    align-self: flex-start;
-}
-
 .msgBox.selected
 {   
     background-color: var(--c3);
 }
-
-#delBtn
-{
-    display:none;
-    position: absolute;
-    font-size: 20px;
-    font-weight: bold;
-    border: none;
-    border-radius: 20px;
-    padding: 5px 10px;
-    background-color: var(--c3);
-    color: var(--c6);
-}
-
-#delBtn:hover, #delBtn:focus-visible
-{
-    background-color: color-mix(in srgb, var(--c3) 85%, black); 
-}
-
-
-
         
 .msgBoxMessage
-{   
-    grid-column: 2;
-
-    
+{    
     display: grid;
     grid-template-columns: 1fr;
     gap: 12px;
@@ -707,6 +654,7 @@ header button:hover
 .theme-switch input {
   display: none; /* Esconde o checkbox real */
 }
+
 
 /* O fundo do slider */
 .slider {
